--- a/eduspire_new_design/dashboard.html
+++ b/eduspire_new_design/dashboard.html
@@ -43,19 +43,14 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <span class="close_icon" style="display: none;">X</span>
                     <ul class="navbar-nav l">
-                        <li class="nav-item std dropdown">
-                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javascript:">Student</a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                   <p>Switch to the student view here - get back to the courses you’re taking.</p>
-                                </li>                               
-                            </ul>
+                        <li class="nav-item std">
+                            <a class="nav-link" href="index.html">Student</a>
                         </li>
                         <li class="nav-item u_lgn dropdown">
                             <a class="nav-link dropdown-toggle" href="javascript:" data-toggle="dropdown"><span>A</span></a>
                             <ul class="dropdown-menu">
                                 <li>
-                                   <a href="javascript:" class="usr">
+                                   <a href="instructor_profile.html" class="usr">
                                        <div class="icon">
                                            <span>A</span>
                                        </div>
@@ -94,7 +89,7 @@
         <div class="dash_sidebar">
             <ul class="side_l">
                 <li class="lg">
-                    <a href="javascript:"><img src="images/logo_d.png" alt="" /></a>
+                    <a href="dashboard.html"><img src="images/logo_d.png" alt="" /></a>
                 </li>
                 <li>
                     <a href="javascript:">
