--- a/eduspire_new_design/index.html
+++ b/eduspire_new_design/index.html
@@ -478,7 +478,7 @@
                                 <div class="info">
                                     <div class="desc">
                                         <p class="sub"><span class="sbj">English</span></p>
-                                        <h3>Mission UPSC CSE 2021: 2 year Batch Course - Part II</h3>
+                                        <h3>Mission class 10 CSE 2021: 2 year Batch Course - Part II</h3>
                                         <p>Started on Mar 29</p>
                                     </div>
                                     <p class="note">Anil tripathi</p>
@@ -497,7 +497,7 @@
                                 <div class="info">
                                     <div class="desc">
                                         <p class="sub"><span class="sbj">Hindi</span></p>
-                                        <h3>One Year Batch Course for UPSC CSE 2021: March (Hindi) - Part II</h3>
+                                        <h3>One Year Batch Course for class 10 CSE 2021: March (Hindi) - Part II</h3>
                                         <p>Started on Mar 29</p>
                                     </div>
                                     <p class="note">Sonu singh</p>
@@ -903,7 +903,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Eduspire UPSC Championship [All India Free Mock for Prelims 2020] </h3>
+                                        <h3>Eduspire class 10 Championship [All India Free Mock for Prelims 2020] </h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 4 • Mar 9, 9:30 PM</p>
@@ -914,7 +914,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Free Mock Tests on UPSC CSE Prelims 2020</h3>
+                                        <h3>Free Mock Tests on class 10 CSE Prelims 2020</h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 12 • Mar 22, 12:30 AM</p>
@@ -925,7 +925,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Free Mock Tests on UPSC CSAT Prelims 2020</h3>
+                                        <h3>Free Mock Tests on class 10 CSAT Prelims 2020</h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 4 • Mar 22, 1:30 AM</p>
@@ -936,7 +936,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Eduspire UPSC Championship [All India Free Mock for Prelims 2020] </h3>
+                                        <h3>Eduspire class 10 Championship [All India Free Mock for Prelims 2020] </h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 4 • Mar 9, 9:30 PM</p>
@@ -947,7 +947,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Free Mock Tests on UPSC CSE Prelims 2020</h3>
+                                        <h3>Free Mock Tests on class 10 CSE Prelims 2020</h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 12 • Mar 22, 12:30 AM</p>
@@ -958,7 +958,7 @@
                             <a href="javascript:;" class="box">
                                 <div class="info">
                                     <div class="desc">
-                                        <h3>Free Mock Tests on UPSC CSAT Prelims 2020</h3>
+                                        <h3>Free Mock Tests on class 10 CSAT Prelims 2020</h3>
                                         <p class="free"><span>Free</span></p>
                                     </div>
                                     <p class="note">Test 4 • Mar 22, 1:30 AM</p>
