--- a/eduspire_new_design/instructor.html
+++ b/eduspire_new_design/instructor.html
@@ -524,7 +524,7 @@
                     <p class="t">Empower your team. Lead the industry.</p>
                     <h3>We're your strategic learning partner to help move skills forward.</h3>
                     <div class="button">
-                        <a href="javascript:" class="btndefault big">Request a free demo</a>
+                        <a href="dashboard.html" class="btndefault big">Get started</a>
                     </div>
                     <div class="fr_pln">
                         <p>Have a team of 5-20? <a href="javascript:">Get a free trial of team plan here.</a></p>
