--- a/eduspire_new_design/live_classes.html
+++ b/eduspire_new_design/live_classes.html
@@ -260,7 +260,7 @@
                             <div class="col-md-6 col-sm-6">
                                 <div class="bx l">
                                     <div class="desc">
-                                        <p class="t">Eduspire UPSC Championship [All India Free Mock for Prelims 2020]</p>
+                                        <p class="t">Eduspire class 10 Championship [All India Free Mock for Prelims 2020]</p>
                                         <h3>All India Free Full-Length Mock Test -3- Analysis By G Rajput Sir (English+Hindi)</h3>
                                         <p>Lesson 12 · Apr 26</p>
                                         <div class="buttons">
@@ -334,7 +334,7 @@
                                     <a href="javascript:;" class="box">
                                         <div class="info">
                                             <div class="desc">
-                                                <h3>Eduspire UPSC Championship [All India Free Mock for Prelims 2020] </h3>
+                                                <h3>Eduspire class 10 Championship [All India Free Mock for Prelims 2020] </h3>
                                                 <p class="free"><span>Free</span></p>
                                             </div>
                                             <p class="note">Test 4 • Mar 9, 9:30 PM</p>
@@ -345,7 +345,7 @@
                                     <a href="javascript:;" class="box">
                                         <div class="info">
                                             <div class="desc">
-                                                <h3>Free Mock Tests on UPSC CSE Prelims 2020</h3>
+                                                <h3>Free Mock Tests on class 10 CSE Prelims 2020</h3>
                                                 <p class="free"><span>Free</span></p>
                                             </div>
                                             <p class="note">Test 12 • Mar 22, 12:30 AM</p>
@@ -356,7 +356,7 @@
                                     <a href="javascript:;" class="box">
                                         <div class="info">
                                             <div class="desc">
-                                                <h3>Free Mock Tests on UPSC CSAT Prelims 2020</h3>
+                                                <h3>Free Mock Tests on class 10 CSAT Prelims 2020</h3>
                                                 <p class="free"><span>Free</span></p>
                                             </div>
                                             <p class="note">Test 4 • Mar 22, 1:30 AM</p>
@@ -483,7 +483,7 @@
                                         <div class="info">
                                             <div class="desc">
                                                 <p class="sub"><span class="sbj">Hindi</span> <span class="sj">Goverment Periodicals</span></p>
-                                                <h3>GOVERNMENT SCHEMES 2020-21 For UPSC CSE (Class 9)</h3>
+                                                <h3>GOVERNMENT SCHEMES 2020-21 For class 10 CSE (Class 9)</h3>
                                                 <p>Ended on May 1, 2020</p>
                                             </div>
                                             <p class="note">Satyam shrivastav</p>
@@ -524,7 +524,7 @@
                                         <div class="info">
                                             <div class="desc">
                                                 <h3>Dr Sidharth Arora <i class="fas fa-check-circle"></i></h3>
-                                                <p>Pursued M.B.B.S. and L.L.B. Advocate in Supreme Court. Has been teaching UPSC Aspirants and Law students from last 10 years. </p>
+                                                <p>Pursued M.B.B.S. and L.L.B. Advocate in Supreme Court. Has been teaching class 10 Aspirants and Law students from last 10 years. </p>
                                             </div>
                                             <div class="likes">
                                                 <p><span>13M</span> <span class="txt">Watch mins</span></p>
