--- a/eduspire_new_design/top_educator.html
+++ b/eduspire_new_design/top_educator.html
@@ -277,7 +277,7 @@
                                         <div class="info">
                                             <div class="desc">
                                                 <h3>Dr Sidharth Arora <i class="fas fa-check-circle"></i></h3>
-                                                <p>Pursued M.B.B.S. and L.L.B. Advocate in Supreme Court. Has been teaching UPSC Aspirants and Law students from last 10 years. </p>
+                                                <p>Pursued M.B.B.S. and L.L.B. Advocate in Supreme Court. Has been teaching class 10 Aspirants and Law students from last 10 years. </p>
                                             </div>
                                             <div class="likes">
                                                 <p><span>13M</span> <span class="txt">Watch mins</span></p>
